@@ -1,5 +1,8 @@
 2009-09-30  Roland McGrath  <roland@redhat.com>
 
+	* c++/values.cc (dwarf::attr_value::what_space):
+	Grok exprloc, flag_present, sec_offset.
+
 	* c++/values.cc (dwarf::attr_value::what_space): Fix data[48] case
 	to favor constants when expected.
 
